@@ -30,4 +30,5 @@ AV2 Changelog :: version a4.2
 > Fix bison saddle duplication
 > Fix no XP gain for water bubble
 > Fix airblade level II not faster
+> Fix air bubble not properly protecting from damage
 > Remove old "click to open" prompt in radial menu
